Fix code to work on Java 8